# ZKSnark-SoloChain

./: .gitignore  Cargo.toml  README.md  setup.sh
node/: Cargo.toml  build.rs
node/src/: main.rs
pallets/zksnark/: Cargo.toml  build.rs  lib.rs
pallets/zksnark/src/: circuits.rs  lib.rs  merkle.rs  zk_circuit.rs
pallets/zksnark/src/circuits/: enhanced_transaction.circom  merkle_tree.circom  package-lock.json  package.json  verification_key.json
pallets/zksnark/src/circuits/enhanced_transaction_js/: enhanced_transaction.wasm
pallets/zksnark/src/utils/: merkle.rs
runtime/: Cargo.toml  build.rs
runtime/src/: lib.rs
