
[package]
name = "node"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2021"

[dependencies]
# Runtime
solochain-template-runtime = { path = "../runtime", default-features = false }

# Substrate Node Dependencies
frame-support = { version = "39.0.0", default-features = false, features = ["std"] }
frame-system = { version = "39.0.0", default-features = false, features = ["std"] }
sp-runtime = { version = "40.0.0", default-features = false, features = ["std"] }
sp-std = { version = "14.0.0", default-features = false, features = ["std"] }
sp-io = { version = "39.0.0", default-features = false }
sp-version = { version = "37.0.0", default-features = false }
 

# Pallets
pallet-balances = { version = "40.0.0", default-features = false, features = ["std"] }
pallet-aura = { version = "38.0.0", default-features = false, features = ["std"] }
pallet-grandpa = { version = "39.0.0", default-features = false, features = ["std"] }
pallet-sudo = { version = "39.0.0", default-features = false, features = ["std"] }
pallet-timestamp = { version = "38.0.0", default-features = false, features = ["std"] }
pallet-transaction-payment = { version = "39.0.0", default-features = false, features = ["std"] }
frame-executive = { version = "39.0.0", default-features = false }


[build-dependencies]
substrate-build-script-utils = { version = "11.0.0"}

[features]
default = ["std"]
metadata-hash = []
std = [
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-version/std",
    "pallet-balances/std",
    "pallet-aura/std",
    "pallet-grandpa/std",
    "pallet-sudo/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment/std",
    "frame-executive/std",
    
]
