    
[package]
name = "solochain-template-runtime"
version = "0.1.0"
authors = ["Your Name <you@example.com>"]
edition = "2021"

[dependencies]
# Substrate Core Dependencies
frame-system = { version = "39.0.0", default-features = false, features = ["std"] }
sp-runtime = { version = "40.0.0", default-features = false, features = ["std"] }
sp-std = { version = "14.0.0", default-features = false, features = ["std"] }
sp-io = { version = "39.0.0", default-features = false }
sp-version = { version = "37.0.0", default-features = false }
sp-core = { version = "35.0.0", default-features = false, features = ["std"] }
substrate-wasm-builder = {version = "25.0.0"}
getrandom = { version = "0.2.15", features = ["js"] }
ark-groth16 = { version = "0.5.0", default-features = false }
ark-bls12-381 = { version = "0.5.0", default-features = false }
ark-ff = { version = "0.5.0", default-features = false }
ark-ec = { version = "0.5.0", default-features = false }
serde_json = { version = "1.0.135", default-features = false, features = ["alloc"] }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }

# Pallets
pallet-zksnark = { path = "../pallets/zksnark", default-features = false }
pallet-balances = { version = "40.0.0", default-features = false, features = ["std"] }
pallet-aura = { version = "38.0.0", default-features = false, features = ["std"] }
pallet-grandpa = { version = "39.0.0", default-features = false, features = ["std"] }
pallet-sudo = { version = "39.0.0", default-features = false, features = ["std"] }
pallet-timestamp = { version = "38.0.0", default-features = false, features = ["std"] }
pallet-transaction-payment = { version = "39.0.0", default-features = false, features = ["std"] }
frame-executive = { version = "39.0.0", default-features = false }
frame-support = { version = "39.0.0", default-features = false, features = ["std"] }

[build-dependencies]
substrate-wasm-builder = { version = "25.0.0" }


[features]
default = ["std"]
metadata-hash = []
std = [
    "frame-support/std",
    "frame-system/std",
    "sp-runtime/std",
    "sp-std/std",
    "sp-version/std",
    "pallet-balances/std",
    "pallet-aura/std",
    "pallet-grandpa/std",
    "pallet-sudo/std",
    "pallet-timestamp/std",
    "pallet-transaction-payment/std",
    "frame-executive/std",
]
