[package]
name = "pallet-zksnark"
version = "0.1.0"
edition = "2021"
authors = ["Your Name <your.email@example.com>"]
description = "A Substrate pallet for zk-SNARK verification"

[dependencies]
codec = { package = "parity-scale-codec", version = "3.6.12", default-features = false, features = ["derive"] }
scale-info = { version = "2.11.6", default-features = false, features = ["derive"] }
frame-support = { version = "39.0.0", default-features = true }
frame-system = { version = "39.0.0", default-features = false }
frame-benchmarking = { version = "39.0.0", default-features = false, optional = true }
sp-core = { version = "35.0.0", default-features = false }
sp-io = { version = "39.0.0", default-features = false }
sp-runtime = { version = "40.0.0", default-features = false }
sp-std = { version = "14.0.0", default-features = false }

# Cryptographic dependencies
ark-bls12-381 = { version = "0.5.0", default-features = true }
ark-ec = { version = "0.5.0", default-features = true }
ark-ff = { version = "0.5.0", default-features = true }
ark-std = { version = "0.5.0", default-features = true }
ark-serialize = { version = "0.5.0", default-features = true }
ark-groth16 = { version = "0.5.0", default-features = true }
hex = { version = "0.4.3", default-features = false, features = ["alloc"] }
serde_json = { version = "1.0.137", default-features = false, features = ["alloc"] }
ark-snark = { version = "0.5.1", default-features = true }

[dev-dependencies]
sp-core = { version = "35.0.0" }
sp-io = { version = "39.0.0" }
sp-runtime = { version = "40.0.0" }
ark-bls12-377 = "0.5.0"
ark-bls12-381 = "0.5.0"
ark-ed-on-bls12-377 = "0.5.0"
ark-ed-on-bls12-381 = "0.5.0"
paste = "1.0.15"
tempdir = "0.3.7"


[features]
default = ["std"]
std = [
    "codec/std",
    "scale-info/std",
    "frame-support/std",
    "frame-system/std",
    "frame-benchmarking/std",
    "sp-core/std",
    "sp-io/std",
    "sp-runtime/std",
    "sp-std/std",
    "ark-bls12-381/std",
    "ark-ec/std",
    "ark-ff/std",
    "ark-std/std",
    "ark-serialize/std",
    "ark-groth16/std",
    "serde_json/std",
    "hex/std",
]
