[package]
name = "pallet-zksnark"
version = "0.1.0"
edition = "2021"
description = "A Substrate pallet for zk-SNARK verification"

[dependencies]
# Substrate FRAME
frame-support = { version = "39.0.0", default-features = true }
frame-system = { version = "39.1.0", default-features = true }
sp-runtime = { version = "40.1.0", default-features = true }
sp-core = { version = "35.0.0", default-features = true }
sp-io = { version = "39.0.0", default-features = true }

# SCALE
parity-scale-codec = { version = "3.7.2", default-features = true, features = ["derive"] }
scale-info = { version = "2.11.6", default-features = true, features = ["derive"] }

# Halo2 Ecosystem
halo2_gadgets = { version = "0.3.1", default-features = false }
halo2_poseidon = { version = "0.1.0", default-features = false }

# Serialization
hex = { version = "0.4.3", default-features = true, features = ["alloc"] }
halo2_proofs = { version = "0.3.0"}
pasta_curves = "0.5.0"
serde = { version = "1.0"}
serde_json = "1.0"
base64 = "0.22.1"

[dev-dependencies]
sp-core = { version = "35.0.0", default-features = true }
sp-io = { version = "39.0.0", default-features = true }
sp-runtime = { version = "40.1.0", default-features = true }
tempdir = "0.3.7"

[build-dependencies]
halo2_proofs = { version = "0.3.0", default-features = true }
serde_json = { version = "1.0", default-features = true }
pasta_curves = { version = "0.5.1", default-features = true }
serde = { version = "1.0.138" , default-features = true }
base64 = { version = "0.22.1", default-features = true }
[features]
default = ["std"]
std = [
    "frame-support/std",
    "frame-system/std",
    "sp-core/std",
    "sp-runtime/std",
    "sp-io/std",
    "serde_json/std",
    "hex/std",
]